--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>katie landing</title>
+        <title>Katie Mangano</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -25,15 +25,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="hero-unit">
-            <h1>'Allo, 'Allo!</h1>
-            <p>You now have</p>
-            <ul>
-                <li>HTML5 Boilerplate</li>
-                <li>Sass</li>
-                <li>Modernizr</li>
+        <div class="container km-p">
+            <a class="km-view-work-a" href="http://kmangano.com/index/"><div class="km-view-work"><div class="km-view-work-txt">View<br>Work</div></div></a>
+            <!-- <div class="km-frame"></div> -->
+            <ul class="km-ul">
+                <li class="km-slogan">Katie Mangano / </li>
+                <li class="km-slogan">Graphic Design / </li>
             </ul>
-        </div>
+        </div><!-- #container -->
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
@@ -48,6 +48,9 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="scripts/vendor/jquery-waypoints.js"></script>
+        <script src="scripts/vendor/hypher.js"></script>
+        <script src="scripts/vendor/en-us.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
