Added mobile break points

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Katie Mangano</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1 minimal-ui">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css styles/vendor.css -->
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 
+        <script type="text/javascript" src="//use.typekit.net/ujs5pis.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
@@ -25,12 +28,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container km-p">
-            <a class="km-view-work-a" href="http://kmangano.com/index/"><div class="km-view-work"><div class="km-view-work-txt">View<br>Work</div></div></a>
+        <div class="container">
+            <div class="km-flex-holder">
+                <a class="km-view-work-a" href="http://kmangano.com/index/"><div class="km-view-work"><div class="km-view-work-txt">View<br>Work</div></div></a>
+
+            </div>
             <!-- <div class="km-frame"></div> -->
             <ul class="km-ul">
                 <li class="km-slogan">Katie Mangano / </li>
-                <li class="km-slogan">Graphic Design / </li>
+                <li class="km-slogan">Smart <span class="km-st">Ass</span> Design / </li>
             </ul>
         </div><!-- #container -->
 
